tests/ui/one_of_non_printable_draw.stderr
error[E0277]: `OsString` has no printed representation
  --> tests/ui/one_of_non_printable_draw.rs:12:21
   |
12 |       let _ = tc.draw(hegel::one_of!(
   |  ________________----_^
   | |                |
   | |                required by a bound introduced by this call
13 | |         gs::just(OsString::new()),
14 | |         gs::just(OsString::new()),
15 | |     ));
   | |_____^ `OsString` does not implement `PrettyPrintable`
   |
   = help: the trait `PrettyPrintable` is not implemented for `OsString`
   = note: for your own type, add `#[derive(PrettyPrintable)]` (or `hegel::pretty_print_as_debug!` for a `Debug` type)
   = note: for a foreign type, make the generator printable instead: `.print_as_debug()` prints any `Debug` value, `.print_with(..)` prints a custom representation
   = note: or draw without reporting the value via `tc.draw_silent(..)`
   = help: the following other types implement trait `PrettyPrintable`:
             &T
             &mut T
             ()
             (A, B)
             (A, B, C)
             (A, B, C, D)
             (A, B, C, D, E)
             (A, B, C, D, E, F)
           and $N others
   = note: required for `JustGenerator<OsString>` to implement `PrintableGenerator<OsString>`
   = note: 1 redundant requirement hidden
   = note: required for `OneOf2Generator<JustGenerator<OsString>, JustGenerator<OsString>, OsString>` to implement `PrintableGenerator<OsString>`
note: required by a bound in `TestCase::draw`
  --> src/test_case.rs
   |
   |     pub fn draw<T>(&self, generator: impl PrintableGenerator<T>) -> T {
   |                                           ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `TestCase::draw`
